--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,13 @@
             <artifactId>hibernate-entitymanager</artifactId>
             <version>5.4.0.Final</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.4</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
 </project>
